# deuthon

./: LICENSE  pyproject.toml
src/deuthon/: __main__.py  importer.py  interpreter.py  transformer.py
src/deuthon/base/: ausnahme.deu  bedingungen.deu  typen.deu
src/deuthon/dictionary/: __init__.py
src/deuthon/wrappers/: importbib.deu  json.deu  zeichenkette.deu  zeit.deu  zufall.deu
src/deuthon/wrappers/ervbib/: __init__.deu  anfrage.deu
src/deuthon/wrappers/htüp/: __init__.deu  kundin.deu
tests/: ervbib_json.deu  test.deu  testimport.deu
tests/testmodul/: __init__.deu
